solve padding-top on small screen & add editBio button

--- a/SPAtraductores/SPAtraductores/ClientApp/app/components/app/app.component.css
+++ b/SPAtraductores/SPAtraductores/ClientApp/app/components/app/app.component.css
@@ -1,10 +1,10 @@
 @media (max-width: 767px) {
     /* On small screens, the nav menu spans the full width of the screen. Leave a space for it. */
     .body-content {
-        padding-top: 50px;
+        padding-top: 50px !important;
     }
 }
 
 .noPadding {
-    padding: 0px !important;
+    padding: 0px;
 }
